--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Austen Au</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="images/logo.png">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p id="name">Austen Au</p>
+    <div class="top-bar">
+        <p id="name">Austen Au</p>
+        <span class="logo"><img id="logo" src="images/logo.png"></span>
+    </div>
     <div class="title">
         <p id="main-text">A highly motivated student, hoping to create impactful online experiences.</p>
         <div class="link-row">
